syntax = "proto3";

option go_package = ".;proto";

package proto;

service Notify {
  rpc NotifyUser(NotifyRequest) returns (NotifyReply) {}
}

message NotifyLink {
  string label = 1;
  string url = 2;
}

message NotifyRequest {
  string type = 1;
  string subject = 2;
  string content = 3;
  bytes metadata = 4;
  repeated NotifyLink links = 5;
  uint64 recipient_id = 6;
  string client_id = 7;
  string client_secret = 8;
  bool is_realtime = 9;
  bool is_force_push = 10;
}

message NotifyReply {
  bool is_sent = 1;
}